--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -41,7 +41,7 @@
   "calculate": "预估",
   "contributingReward": "支持奖励",
   "contributingIncome": "支持收益",
-  "phaPrice": "PHA Price价格",
+  "phaPrice": "PHA 价格",
   "stake": "质押",
   "phalaStakeAPY": "PHA 众贷奖励年化",
   "KSMAPY": "KSM 节点抵押年化",
@@ -63,7 +63,7 @@
   "rewardVestTip": "如果Phala在本期拍卖中赢得插槽，将按如下计划释放奖励。如果失败，您可以在拍卖结束后立即全部解锁您的质押。",
   "heightestBid": "最高出价",
   "averageBid": "平均出价",
-  "khalaBid": "当前 Khala 出价",
+  "khalaBid": "Khala",
   "phalaBid": "当前Phala出价",
   "noMoreReward": "到达奖励软顶，之后的支持没有奖励",
   "calculatePopInfo1": "支持奖励：质押 KSM 支持 Khala 可获得的 PHA 奖励",
@@ -163,5 +163,5 @@
   "alert": "提示",
   "install": "安装",
   "pleaseInstallText": "无 polkadot{.js} 插件，请先安装",
-  "twitterShareText": "邀请你来支持Khala平行链卡槽拍卖！在Khala众贷中每贡献1枚KSM将收获100PHA奖励，成功邀请好友贡献还将获得额外0.5%奖励。点击下方邀请链接立即参与！"
+  "twitterShareText": "来支持Khala平行链卡槽拍卖！在Khala众贷中每贡献1枚KSM将收获100PHA奖励！点击下方链接立即参与！"
 }
