--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -65,7 +65,7 @@
   "heightestBid": "Highest Bid",
   "averageBid": "Average Bid",
   "khalaBid": "Khala",
-  "phalaBid": "Phala Bid",
+  "phalaBid": "Khala Bid",
   "noMoreReward": "No more reward.",
   "calculatePopInfo1": "Contribution Reward：Stake KSM to contribute Khala's PHA rewards",
   "calculatePopInfo2": "PHA Price、KSM APY、KSM Price：Default current market data, editable",
