--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -65,7 +65,7 @@
   "heightestBid": "最高出价",
   "averageBid": "平均出价",
   "khalaBid": "Khala",
-  "phalaBid": "当前Phala出价",
+  "phalaBid": "当前Khala出价",
   "noMoreReward": "到达奖励软顶，之后的支持没有奖励",
   "calculatePopInfo1": "支持奖励：质押 KSM 支持 Khala 可获得的 PHA 奖励",
   "calculatePopInfo2": "PHA 价格、KSM 年化、KSM 价格：默认当前市场数据，可编辑",
