--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -165,5 +165,7 @@
   "install": "Install",
   "pleaseInstallText": "No polkadot{.js} extension found, please install it first",
   "twitterShareText": "Support Khala's Crowdloan in Kusama Slot Auction! Each $KSM contributed will earn 100 $PHA on a slot win! Participate link ",
-  "notAllowBindYourself": "Can't invite yourself"
+  "notAllowBindYourself": "Can't invite yourself",
+  "Go to": "Go to",
+  "page": "page"
 }
