--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -167,5 +167,6 @@
   "twitterShareText": "Support Khala's Crowdloan in Kusama Slot Auction! Each $KSM contributed will earn 100 $PHA on a slot win! Participate link ",
   "notAllowBindYourself": "Can't invite yourself",
   "Go to": "Go to",
-  "page": "page"
+  "page": "page",
+  "you canceled the contribution": "you canceled the contribution"
 }
