--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -167,5 +167,6 @@
   "twitterShareText": "来支持Khala平行链卡槽拍卖！在Khala众贷中每贡献1枚KSM将收获100PHA奖励！点击下方链接立即参与！",
   "notAllowBindYourself": "不能邀请自己",
   "Go to": "跳转",
-  "page": "页"
+  "page": "页",
+  "you canceled the contribution": "交易取消"
 }
