--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -171,5 +171,6 @@
   "notAllowBindYourself": "Can't invite yourself",
   "Go to": "Go to",
   "page": "page",
-  "you canceled the contribution": "you canceled the contribution"
+  "you canceled the contribution": "you canceled the contribution",
+  "The campaign has ended": "The campaign has ended"
 }
