--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -171,5 +171,6 @@
   "notAllowBindYourself": "不能邀请自己",
   "Go to": "跳转",
   "page": "页",
-  "you canceled the contribution": "交易取消"
+  "you canceled the contribution": "交易取消",
+  "The campaign has ended": "活动已结束"
 }
